# imgbrd-grabber

.github/workflows/: build.yml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/crash-reporter/: CMakeLists.txt  crash-reporter-window.cpp
src/gui/: CMakeLists.txt
src/gui-qml/: CMakeLists.txt
src/gui-qml/src/: main-screen.cpp  main-screen.h  main.cpp
src/gui-qml/src/components/: AddSourceScreen.qml  AutoCompleteSearchEdit.qml  Badge.qml  FavoritesScreen.qml  GalleryScreen.qml  ImageScreen.qml  InnerBorder.qml  Loading.qml  LogScreen.qml  MainDrawer.qml  MiniRadioIndicator.qml  ResultsView.qml  SearchEdit.qml  SearchField.qml  SearchScreen.qml  SourcesScreen.qml  VideoPlayer.qml
src/gui/src/: favorite-window.h  main-window.cpp
src/gui/src/main/: main.cpp
src/languages/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/src/: functions.cpp  functions.h  language-loader.cpp
src/lib/src/commands/: sql-worker.cpp
src/lib/src/downloader/printers/: json-printer.cpp
src/lib/src/filename/: filename-execution-visitor.cpp  filename-execution-visitor.h  filename-visitor-javascript.cpp
src/lib/src/loader/: downloadable.h
src/lib/src/login/: oauth2-login.cpp
src/lib/src/models/: filename.cpp  image.cpp  image.h  page-api.cpp  site.cpp  site.h
src/lib/src/models/api/: javascript-grabber-helper.cpp
src/lib/src/models/filtering/: blacklist.h  meta-filter.cpp
src/lib/src/tags/: tag-database-in-memory.h
src/sites/: package-lock.json  package.json
src/tests/: CMakeLists.txt
src/tests/languages/: CMakeLists.txt
src/tests/src/: functions-test.cpp
(+25 files in other folders)
